--- a/style.css
+++ b/style.css
@@ -270,6 +270,9 @@ img{
   #e9e5db;
   width: 100%;
   padding: 1rem 10rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3.5rem;
 }
 
 .volunteer-title{
@@ -307,9 +310,46 @@ img{
 .volunteer-border{
   align-self: stretch;
   width: 1rem;
-  /* height: 10rem; */
   border: none;
   border-left: 2px dotted rgb(225,83,60);
+}
+
+/* volunteer box2 starts here!!! */
+.volunteer-box2{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.img-box1,.img-box2{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.adoptable-pet{
+  font-size: 1.7rem;
+  color: rgb(225,83,60);
+  display: flex;
+  flex-direction: row;
+}
+
+.img-slider-container{
+  width: 100%;
+  height: 10rem;
+  display: flex;
+  gap: 1rem;
+}
+
+.dog-img-box1{
+  width: 35%;
+  border: 8px solid white;
+}
+
+.dog-img-box1 img{
+  height: 100%;
+  object-fit: cover;
 }
 
 /* week box style */
@@ -360,6 +400,97 @@ img{
   color: rgb(225,83,60);
   margin-bottom: 1rem;
 }
+
+.volunteer-box3{
+  width: 100%;
+  padding: 2rem 0rem;
+  border-top: 2px dotted rgb(225,83,60);
+  display: flex;
+  flex-direction: row;  
+}
+
+.ticket-box{
+  width: 50%;
+  position: relative;
+}
+
+.ticket-img-box{
+  width: 100%;
+}
+
+.ticket-cnt{
+  width: 100%;
+  position: absolute;
+  top: 22%;
+  left: -4%;
+  display: flex;
+  flex-direction: row;
+}
+
+.tckt-cnt1{
+  color: rgb(225,83,60);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.2rem;
+}
+
+.tckt-value{
+  font-size: 1.5rem;
+}
+
+.tckt-value-dollar{
+  font-size: 2.1rem;
+}
+
+.tckt-validity{
+  font-size: 1.2rem;
+}
+
+.tckt-cnt-title{
+  color: rgb(225,83,60);
+  font-size: 1.3rem;
+}
+
+.tckt-cnt2{
+  width: 100%;
+}
+
+.tckt-cnt-description{
+  font-size: 0.9rem;
+  line-height: 1.2rem;
+}
+
+/* event box style starts here!!! */
+.event-box{
+  width: 50%;
+  padding: 0rem 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.event-title-box{
+  display: flex;
+}
+
+.event-title{
+  text-transform: uppercase;
+  color: rgb(225,83,60);
+}
+
+.spcl-adoption-day-title,.national-adoption-day-title{
+  color: rgb(225,83,60);
+  font-size: 0.9rem;
+}
+
+.spl-cnt,.national-adoption-cnt{
+  font-size: 0.9rem;
+}
+
 
 /* footer */
 .footer{
