--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body{
   display: flex;
   box-shadow: 0px 0px 2px #8b8b8b;
   position: fixed;
+  z-index: 1;
 }
 
 .sub-box-1{
@@ -197,6 +198,30 @@ img{
 /* pet-image-container */
 .pet-image-container{
   width: 37rem;
+  overflow: hidden;
+}
+
+/* wrapper-container */
+.wrapper-container{
+  width: 100%;
+  display: flex;
+  animation: 12s linear infinite left-slide-in;
+}
+
+/* animation starts here!!! */
+@keyframes left-slide-in {
+  0%{
+    transform: translateX(0%);
+  }
+  42%{
+    transform: translateX(0%);
+  }
+  50%{
+    transform: translateX(-100%);
+  }
+  100%{
+    transform: translateX(-100%);
+  }
 }
 
 .donate-container{
@@ -335,7 +360,11 @@ img{
   flex-direction: row;
 }
 
-.img-slider-container{
+.slider-conatiner{
+  width: 90%;
+}
+
+.img-wrapper-container{
   width: 100%;
   height: 10rem;
   display: flex;
@@ -343,13 +372,18 @@ img{
 }
 
 .dog-img-box1{
-  width: 35%;
+  width: 45%;
   border: 8px solid white;
 }
 
 .dog-img-box1 img{
   height: 100%;
   object-fit: cover;
+}
+
+.cat-img-1,.cat-img-2,.cat-img-3{
+  width: 100%;
+  height: 100%;
 }
 
 /* week box style */
